tests/type_errors/adding_strings_is_not_allowed.sy

def addSelf
  : forall a
    . let Num a
    . a -> a
  : a = a + a

def main : Str = addSelf ' "ABC"

--+ expected exit status: 7
--+ expected stderr:
--+ > The requirements are not valid here.
--+ 
--+ Str 
--+ is not
--+ (class Num)
--+ 
--+ tests/type_errors/adding_strings_is_not_allowed.sy
--+   8| def main : Str = addSelf ' "ABC"
--+                               ^

